Добавлена возможность использовать профили для выполнения анализа

--- a/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle
+++ b/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle
@@ -430,9 +430,11 @@ getKotlinDetektTask = { isAndroidProject, baselinePath, configPath ->
                       '-o', output,
                       '-c', config,
                       '-f', filters,
-                      '-b', baselinePath,
                       '--output-name', outputName
         ]
+        if (baselinePath != null) {
+            params.addAll(['-b', baselinePath])
+        }
         args(params)
     }
     return task
