--- a/tools/static-analysis/gradle/staticAnalysis.gradle
+++ b/tools/static-analysis/gradle/staticAnalysis.gradle
@@ -1,4 +1,5 @@
 def getAndroidProjectSources
+def getParameters
 
 apply from: "${rootDir}/android-style-guide/tools/static-analysis/gradle/commonHttpStaticAnalysis.gradle"
 apply from: "${rootDir}/android-style-guide/tools/static-analysis/gradle/detektTasks.gradle"
@@ -33,8 +34,10 @@ gradle.projectsEvaluated {
                 "-Werror"
     }
 
+    def useProfile = rootProject.hasProperty("useProfile") ?
+            rootProject.getProperties().get("useProfile") : null
     def excludes = rootProject.extensions.findByName("pathExludes")
-    def analysatorParameters = rootProject.hasProperty("anlysators") ? rootProject.ext.anlysators : null
+    def analysatorParameters = getParameters(useProfile)
     def excludesAnalysers = analysatorParameters ? analysatorParameters["staticAnalysisExcludes"] : []
 
     def androidStaticAnalysisTasks = getStaticAnalysisTaskNames(true, analysatorParameters, getAndroidProjectSources(excludes))
@@ -66,6 +69,15 @@ gradle.projectsEvaluated {
 
     task checkMyScript {
     }
+}
+
+getParameters = { profile ->
+    def properties = rootProject.hasProperty("anlysators") ? rootProject.ext.anlysators : null
+    if (properties != null && properties.containsKey(profile)) {
+        return properties.get(profile)
+    }
+
+    return properties
 }
 
 getAndroidProjectSources = { excludes ->
